# rabbit-hole

./: .clang-format  .gitignore  .style.yapf  README.md
deeplegerdemain/: incremental-transformer-decoder.ipynb  transformer.ipynb  transformer.py
gemm/: .bazelrc  .clangd  .gitignore  README.md  WORKSPACE.bazel
gemm/cpu/: BUILD.bazel  benchmark_driver.py  matmul.hpp  matmul_microkernels_ext.hpp  notes.ipynb  pybind_matmul.cpp  test_driver.py
gemm/cpu/0_reference/: matmul_ref.cpp
gemm/cpu/1_naive/: matmul_naive.cpp
gemm/cpu/2_tile/: matmul_tile.cpp
gemm/cpu/3_simple_pipelines/: matmul_microkernels.hpp  matmul_simple_pipelines.cpp
gemm/cpu/4_fiveloop_pipelines/: matmul_fiveloop_pipelines.cpp
gemm/cpu/5_fiveloop_pipelines_copied/: matmul_direct_copy.hpp  matmul_fiveloop_pipelines_copied.cpp
gemm/cpu/6_fiveloop_pipelines_packed/: matmul_fiveloop_pipelines_packed.cpp  matmul_microkernels.hpp  matmul_pack.hpp
gemm/cuda/: BUILD.bazel  benchmark_driver.py  matmul.cuh  pybind_matmul.cpp  pybind_matmul.hpp  test_driver.py
gemm/cuda/00_reference/: matmul_ref.cu
gemm/cuda/01_naive/: matmul_naive.cu
gemm/cuda/02_1d_cta/: matmul_1d.cu
gemm/cuda/03_thread_tiling/: matmul_thread_tiling_0.cu  matmul_thread_tiling_1_abstract.cu
gemm/cuda/04_smem/: matmul_smem_0.cu  matmul_smem_1_abstract.cu  matmul_smem_2_b.cu
gemm/cuda/05_register_pipelining/: matmul_register_pipelining.cu
gemm/cuda/05_smem_pipelining/: matmul_smem_pipelining_0_incorrect.cu  matmul_smem_pipelining_1.cu  matmul_smem_pipelining_1_clobbered.cu  matmul_smem_pipelining_2.cu
gemm/cuda/05_warp_tiling/: matmul_warp_tiling.cu
gemm/cuda/06_pipelining/: matmul_smem_and_register_pipelining.cu
gemm/cuda/07_pipelinging_and_warp_tiling/: matmul_pipelining_and_warp_tiling_0_clobbered.cu  matmul_pipelining_and_warp_tiling_0_clobbered_pipeline.cu  matmul_pipelining_and_warp_tiling_1.cu  matmul_pipelining_and_warp_tiling_2_cutlass.cu  matmul_pipelining_and_warp_tiling_3_load_bc_free.cu  matmul_pipelining_and_warp_tiling_4_lds128.cu  matmul_pipelining_and_warp_tiling_5_store_bc_free.cu  matmul_pipelining_and_warp_tiling_6_cleanup.cu
gemm/cuda/08_better_lds/: matmul_better_lds_0_load_bc_free.cu  matmul_better_lds_1_lds128.cu
gemm/cuda/08_vectorized_sts/: matmul_vectorized_sts.cu
gemm/cuda/09_better_sts/: matmul_better_sts_0_store_bc_free.cu  matmul_better_sts_1_vectorized_sts.cu
gemm/cuda_cute/: BUILD.bazel  benchmark_driver.py  test_driver.py
gemm/cuda_cute/02_1d_cta/: matmul_1d.cu  matmul_1d_projection.cu
gemm/cuda_cute/03_thread_tiling/: matmul_thread_tiling_0.cu  matmul_thread_tiling_1.cu  matmul_thread_tiling_2.cu
gemm/cuda_cute/04_smem/: matmul_smem_0.cu
gemm/cuda_cute/05_pipelining/: matmul_smem_and_register_pipelining_0_naive.cu  matmul_smem_and_register_pipelining_1_cutlass.cu  matmul_smem_and_register_pipelining_2_single_buffer.cu
gemm/cuda_cute/06_pipelining_and_warp_tiling/: matmul_pipelining_and_warp_tiling.cu
gemm/cuda_cute/07_better_sts/: matmul_sts_bc_free.cu
gemm/cuda_cute/08_mma_subtile/: matmul_mma_subtile.cu
gemm/cuda_cute/09_gemm/: matmul_gemm.cu
gemm/cuda_cute/10_copy/: matmul_copy_0_sts.cu  matmul_copy_1_ldg.cu
gemm/cuda_cute/playground/: 00_coop_load.cc  00_layout.cc  01_slice.cc  02_dice.cc  03_local_tile.cc  04_predication.cc  05_logical_product.cc  06_local_partition.cc  07_compose.cc  07_compose_final.cc  07_compose_overapprox.cc  08_local_tile.cc  09_remap_coord.cc  BUILD.bazel
tunable/: tunable_op.md
