load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load("@pybind11_bazel//:build_defs.bzl", "pybind_library")

package(default_visibility = ["//visibility:public"])

pybind_library(
    name = "matmul_interface",
    hdrs = [
        "matmul.cuh",
        "pybind_matmul.hpp",
    ],
)

cuda_library(
    name = "matmul_impl",
    srcs = glob([
        "**/matmul_*.cpp",
        "**/matmul_*.cu",
    ]),
    hdrs = glob(["**/matmul_*.cuh"]),
    deps = [
        "matmul_interface",
        "//cpu:matmul_interface",
        "@local_cuda//:cublas",
    ],
    alwayslink = 1,
)

cc_binary(
    name = "matmul.so",
    srcs = ["pybind_matmul.cpp"],
    linkshared = 1,
    linkstatic = 1,
    deps = [":matmul_impl"],
)

genrule(
    name = "matmul_copy",
    srcs = [":matmul.so"],
    outs = ["matmul.pyd"],
    cmd_bat = "copy /Y $< $@",
    target_compatible_with = ["@platforms//os:windows"],
)
