cc_binary(
    name = "00_layout",
    srcs = ["00_layout.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "01_slice",
    srcs = ["01_slice.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "02_dice",
    srcs = ["02_dice.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "03_local_tile",
    srcs = ["03_local_tile.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "04_predication",
    srcs = ["04_predication.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "05_logical_product",
    srcs = ["05_logical_product.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "06_local_partition",
    srcs = ["06_local_partition.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "07_compose",
    srcs = ["07_compose.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "07_compose_overapprox",
    srcs = ["07_compose_overapprox.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "07_compose_final",
    srcs = ["07_compose_final.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "08_local_tile",
    srcs = ["08_local_tile.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)

cc_binary(
    name = "09_remap_coord",
    srcs = ["09_remap_coord.cc"],
    deps = [
        "@com_github_nvidia_cutlass//:cutlass",
        "@local_cuda//:cuda_headers",
    ],
)
